--- a/components-azurestorage/pom.xml
+++ b/components-azurestorage/pom.xml
@@ -31,11 +31,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.talend.components</groupId>
-			<artifactId>components-common</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>biz.aQute.bnd</groupId>
 			<artifactId>annotation</artifactId>
 		</dependency>
@@ -43,16 +38,13 @@
 			<groupId>org.talend.components</groupId>
 			<artifactId>components-api</artifactId>
 			<version>${project.version}</version>
-			<type>bundle</type>
 		</dependency>
 
 
 		<dependency>
 			<groupId>org.talend.components</groupId>
 			<artifactId>components-common</artifactId>
-			<version>${project.version}</version>
-			<classifier>bundle</classifier>
-			<scope>test</scope>
+			<version>0.16.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Jar containing Test utils methods -->
@@ -106,18 +98,51 @@
 		<dependency>
 			<groupId>org.talend.components</groupId>
 			<artifactId>components-osgitest</artifactId>
-			<version>${project.version}</version>
+			<version>0.16.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.8.0</version>
-		</dependency>
+        <dependency>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-common</artifactId>
+            <version>0.16.0-SNAPSHOT</version>
+            <classifier>bundle</classifier>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+            <plugin>
+            <!-- This plugin is used to generate .link files used for the OSGI test execution with PaxExam -->
+                <groupId>com.github.veithen.alta</groupId>
+                <artifactId>alta-maven-plugin</artifactId>
+                <version>0.4.2-Talend</version>
+                <executions>
+                    <execution>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>generate-test-resources</goal>
+                        </goals>
+                        <configuration>
+                            <name>%groupId%-%artifactId%%dashClassifier%.link</name>
+                            <value>%url%</value>
+                            <separator>${line.separator}</separator>
+                            <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
+                            <dependencySet>
+                                <scope>test</scope>
+                            </dependencySet>
+                            <artifacts>
+                              <artifact>
+                                  <groupId>${project.groupId}</groupId>
+                                  <artifactId>${project.artifactId}</artifactId>
+                                  <classifier>bundle</classifier>
+                                  <version>${project.version}</version>
+                              </artifact>
+                           </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>          		
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -172,7 +197,7 @@
 							<instructions>
 								<Bundle-SymbolicName>org.talend.components.azurestorage</Bundle-SymbolicName>
 								<Service-Component>*</Service-Component>
-								<Import-Package>!sun.security.*,*,aQute.bnd.annotation.component</Import-Package>
+								<Import-Package>!sun.security.*,*</Import-Package>
 								<Embed-Dependency>*;scope=compile|runtime;inline=false;artifactId=!components*</Embed-Dependency>
 								<Include-Resource>{maven-resources},META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt=target/classes/META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt</Include-Resource>
 								<Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
