feat(Pub/Sub): add pub/sub family

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -29,5 +29,6 @@
         <module>components-filedelimited</module>
         <module>components-elasticsearch</module>
         <module>components-filterrow</module>
+        <module>components-pubsub</module>
     </modules>
 </project>
