--- a/components/components-azurestorage/pom.xml
+++ b/components/components-azurestorage/pom.xml
@@ -1,117 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.talend.components</groupId>
         <artifactId>components-parent</artifactId>
-        <version>0.17.0-SNAPSHOT</version>
+        <version>0.18.0-SNAPSHOT</version>
         <relativePath>../../components-parent/pom.xml</relativePath>
     </parent>
-
-    <name>Components - AzureStorage</name>
-    <groupId>org.talend.components</groupId>
     <artifactId>components-azurestorage</artifactId>
-    <version>0.17.0-SNAPSHOT</version>
+    <name>Components - AzureStorage</name>
     <packaging>bundle</packaging>
-
-
     <dependencies>
         <!-- Azure Storage deps ! -->
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-storage</artifactId>
-            <version>4.4.0</version>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-keyvault-core</artifactId>
-            <version>0.8.0</version>
+            <version>0.9.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <!-- others -->
+        <dependency>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>biz.aQute.bnd</groupId>
             <artifactId>annotation</artifactId>
         </dependency>
+        <!-- Test dependencies -->
         <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-api</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-common</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-common</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-            <classifier>bundle</classifier>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
         <!-- Jar containing Test utils methods -->
         <dependency>
             <groupId>org.talend.components</groupId>
             <artifactId>components-api</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-        <!-- spring jar for integration tests -->
-        <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-api-service-rest</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-            <classifier>lib</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-api-service-rest</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-api-service-common</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-       <dependency>
+        <dependency>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-api-service-common</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-api</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <!-- Spring test dependencies -->
+        <dependency>
             <groupId>org.talend.components</groupId>
             <artifactId>components-api-service-rest</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
-        <!-- dep for OSGI tests -->
+        <dependency>
+            <groupId>org.talend.components</groupId>
+            <artifactId>components-api-service-rest</artifactId>
+            <version>${project.version}</version>
+            <classifier>lib</classifier>
+            <scope>test</scope>
+        </dependency>
+        <!-- Tests -->
         <dependency>
             <groupId>org.talend.components</groupId>
             <artifactId>components-osgitest</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.talend.components</groupId>
-            <artifactId>components-common</artifactId>
-            <version>0.17.0-SNAPSHOT</version>
-            <classifier>bundle</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>com.fasterxml.jackson.core</groupId>
-        	<artifactId>jackson-core</artifactId>
-        	<version>2.8.0</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
-            <!-- This plugin is used to generate .link files used for the OSGI test execution with PaxExam -->
+                <!-- This plugin is used to generate .link files used for the OSGI test execution with PaxExam -->
                 <groupId>com.github.veithen.alta</groupId>
                 <artifactId>alta-maven-plugin</artifactId>
                 <version>0.4.2-Talend</version>
@@ -130,17 +130,17 @@
                                 <scope>test</scope>
                             </dependencySet>
                             <artifacts>
-                              <artifact>
-                                  <groupId>${project.groupId}</groupId>
-                                  <artifactId>${project.artifactId}</artifactId>
-                                  <classifier>bundle</classifier>
-                                  <version>${project.version}</version>
-                              </artifact>
-                           </artifacts>
+                                <artifact>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <classifier>bundle</classifier>
+                                    <version>${project.version}</version>
+                                </artifact>
+                            </artifacts>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>               
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -156,31 +156,11 @@
                             <instructions>
                                 <Bundle-SymbolicName>org.talend.components.azurestorage.lib</Bundle-SymbolicName>
                                 <Bundle-Name>${project.name} lib</Bundle-Name>
-                                <Include-Resource>{maven-resources},META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt=target/classes/META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt</Include-Resource>
+                                <Include-Resource>
+                                    {maven-resources},META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt=target/classes/META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt
+                                </Include-Resource>
                                 <Service-Component>*</Service-Component>
                                 <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                            </instructions>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>test-bundle</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>bundle</goal>
-                        </goals>
-                        <configuration>
-                            <classifier>tests</classifier>
-                            <outputDirectory>unexisting_ouput_directory_to_avoid_classes_to_be_embedded</outputDirectory>
-                            <instructions>
-                                <Import-Package>!*internal,org.talend*,org.slf4j*,javax.xml.namespace,org.junit*</Import-Package>
-                                <Bundle-SymbolicName>org.talend.components.azurestorage.test</Bundle-SymbolicName>
-                                <Bundle-Name>Test Fragment for ${project.name}</Bundle-Name>
-                                <Fragment-Host>org.talend.components.azurestorage</Fragment-Host>
-                                <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                                <DynamicImport-Package>*</DynamicImport-Package>
-                                <Embed-Dependency></Embed-Dependency>
-                                <Export-Package>*</Export-Package>
-                                <Include-Resource>=target/test-classes/</Include-Resource>
                             </instructions>
                         </configuration>
                     </execution>
@@ -195,9 +175,11 @@
                             <instructions>
                                 <Bundle-SymbolicName>org.talend.components.azurestorage</Bundle-SymbolicName>
                                 <Service-Component>*</Service-Component>
-                                <Import-Package>!sun.security.*,*</Import-Package>
-                                <Embed-Dependency>*;scope=compile|runtime;inline=false;artifactId=!components*</Embed-Dependency>
-                                <Include-Resource>{maven-resources},META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt=target/classes/META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt</Include-Resource>
+                                <Embed-Dependency>*;scope=compile|runtime;inline=false;artifactId=!components*
+                                </Embed-Dependency>
+                                <Include-Resource>
+                                    {maven-resources},META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt=target/classes/META-INF/maven/${project.groupId}/${project.artifactId}/dependencies.txt
+                                </Include-Resource>
                                 <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                             </instructions>
                         </configuration>
