fix(TDI-38262): do a try for fixing the osgi issue

--- a/components/components-salesforce/components-salesforce-runtime/pom.xml
+++ b/components/components-salesforce/components-salesforce-runtime/pom.xml
@@ -234,6 +234,12 @@
 							<artifacts>
 								<artifact>
 									<groupId>${project.groupId}</groupId>
+									<artifactId>components-salesforce-definition</artifactId>
+									<classifier>bundle</classifier>
+									<version>${project.version}</version>
+								</artifact>
+								<artifact>
+									<groupId>${project.groupId}</groupId>
 									<artifactId>${project.artifactId}</artifactId>
 									<classifier>bundle</classifier>
 									<version>${project.version}</version>
