feat(TDI-38101) : implement Custom Objects - UI and Fixes
TDI-38101 #time 1d

--- a/components/components-marketo/src/main/resources/org/talend/components/marketo/helpers/MarketoColumnMappingsTable.properties
+++ b/components/components-marketo/src/main/resources/org/talend/components/marketo/helpers/MarketoColumnMappingsTable.properties
@@ -1,4 +1,4 @@
-form.Main.title=Main
+form.Main.title=Mappings
 #
 property.marketoColumnName.displayName=Marketo column name
 property.schemaColumnName.displayName=Column name
