--- a/components/components-salesforce/components-salesforce-definition/pom.xml
+++ b/components/components-salesforce/components-salesforce-definition/pom.xml
@@ -118,6 +118,12 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.ops4j.pax.url</groupId>
+            <artifactId>pax-url-aether</artifactId>             
+            <version>2.4.7</version>
+        </dependency>
 	</dependencies>
 	
 	<dependencyManagement>
