feat(TFD-154): finish getSample and getSchema

--- a/components/components-pubsub/pubsub-definition/src/main/resources/org/talend/components/pubsub/PubSubDatasetProperties.properties
+++ b/components/components-pubsub/pubsub-definition/src/main/resources/org/talend/components/pubsub/PubSubDatasetProperties.properties
@@ -1,6 +1,7 @@
 form.Main.title=Pub/Sub Dataset Properties
 form.main.displayName=Pub/Sub Dataset Properties
 property.topic.displayName=Topic
+property.subscription.displayName=Subscription
 property.valueFormat.displayName=Value format
 property.avroSchema.displayName=Avro schema
 property.fieldDelimiter.displayName=Field delimiter
