--- a/components/components-bigquery/bigquery-integration/pom.xml
+++ b/components/components-bigquery/bigquery-integration/pom.xml
@@ -26,6 +26,18 @@
             <groupId>org.talend.components</groupId>
             <artifactId>bigquery-definition</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- BigQuery runtime need guava 20.0 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
         </dependency>
 
         <!-- Tests -->
